results/SVCOMP/specgen/log-SubString01-2024_03_03_17_03_34.txt
public class SubString01 {

    //@ ensures \result ==> f_spec();
    public static boolean f() {
        String letters = "attachfilesbydragginganddroppingthem";

        String tmp = letters.substring(20);
        if (!tmp.equals("ganddroppingthem"))
            return false;

        tmp = letters.substring(6, 10);
        if (!tmp.equals("file"))
            return false;
        return true;
    }

    //@ ensures \result ==> tmp.equals("ganddroppingthem") && tmp.equals("file");
    public static boolean f_spec() {
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/SubString01.java:17: error: cannot find symbol
    //@ ensures \result ==> tmp.equals("ganddroppingthem") && tmp.equals("file");
                            ^
  symbol:   variable tmp
  location: class SubString01
/home/max/Documents/JMLGPT/tmp/SubString01.java:17: error: cannot find symbol
    //@ ensures \result ==> tmp.equals("ganddroppingthem") && tmp.equals("file");
                                                              ^
  symbol:   variable tmp
  location: class SubString01
2 errors

public class SubString01 {

    //@ ensures \result ==> f_spec();
    public static boolean f() {
        String letters = "attachfilesbydragginganddroppingthem";

        String tmp = letters.substring(20);
        if (!tmp.equals("ganddroppingthem"))
            return false;

        tmp = letters.substring(6, 10);
        if (!tmp.equals("file"))
            return false;
        return true;
    }

    //@ ensures \result;
    public static boolean f_spec() {
        return true;
    }
}

